# Manifold-

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  config.yaml
backend/: desktop.py  pyproject.toml
backend/app/: agent.py  brains.py  chat_tools.py  cloud_init.py  config.py  connections.py  data_safety.py  db.py  diagnostics.py  dispatcher.py  estimates.py  hf_lookup.py  image_checker.py  lambda_api.py  main.py  mcp_server.py  model_catalog.py  model_client.py  notifications.py  orchestrator.py  preferences.py  sidecar_client.py  storage.py  task_queue.py  templates.py  terminal_sessions.py  worklog.py
backend/tests/: conftest.py  test_adoption_sweep.py  test_api_flow.py  test_auto_manage.py  test_autopilot.py  test_cancel.py  test_capacity_wait.py  test_chat.py  test_chat_tools.py  test_cloud_init.py  test_config_migrations.py  test_connection.py  test_create_filesystem.py  test_desktop_mcp.py  test_diagnostics.py  test_dispatch_flow.py  test_estimate_routes.py  test_estimates.py  test_field_hardening.py  test_files.py  test_gpu_preflight.py  test_guards.py  test_hardening.py  test_host_keys.py  test_image_preflight.py  test_job_history.py  test_launch.py  test_launch_options.py  test_local_hub.py  test_mcp.py  test_mock_isolation.py  test_model_fit.py  test_navigator.py  test_openai_proxy.py  test_parallel_dispatch.py  test_pipeline.py  test_power_user.py  test_project_brief.py  test_readiness.py  test_readopt.py  (+19 more)
brand/: logo-showcase.html
dashboard/: next.config.ts  package-lock.json  package.json
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: agent-on-gpu.md  custom-templates.md  data-pipeline.md  desktop-build.md  distill-your-own-model.md  local-hub.md  manifold-skill.md  (+2 more)
(+52 files in other folders)
