[project]
name = "manifold-backend"
version = "0.1.0"
description = "Local orchestrator for Lambda Cloud GPU instances"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "asyncssh>=2.17",
    "boto3>=1.35",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "mcp>=1.2",
    "python-multipart>=0.0.32",
]

[project.scripts]
manifold-mcp = "app.mcp_server:main"

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "pyinstaller>=6.21.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
