[package]
name = "manifold-desktop"
version = "0.1.0"
description = "Manifold - Lambda Cloud GPU orchestrator"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[profile.release]
strip = true
lto = true
